sty: es6에 맞게 소스 코드 수정

--- a/src/main/view/.eslintrc.json
+++ b/src/main/view/.eslintrc.json
@@ -19,6 +19,7 @@
         "comma-dangle": ["error", {"functions": "ignore"}],
         "react/react-in-jsx-scope": "off",
         "react/jsx-uses-react": "off",
+        "arraysInObjects": false,
         "require-jsdoc": [
             "error",
             {
