feat: Header 및 Side Navigation Bar 추가

--- a/src/main/view/.eslintrc.json
+++ b/src/main/view/.eslintrc.json
@@ -19,7 +19,8 @@
         "comma-dangle": ["error", {"functions": "ignore"}],
         "react/react-in-jsx-scope": "off",
         "react/jsx-uses-react": "off",
-        "arraysInObjects": false,
+        "arraysInObjects": 0,
+        "react/prop-types": "off",
         "require-jsdoc": [
             "error",
             {
