feat: 데이터원본, 데이터 항목 추가 및 Draggable 레이아웃 구현

--- a/src/main/view/.eslintrc.json
+++ b/src/main/view/.eslintrc.json
@@ -15,6 +15,7 @@
         "react"
     ],
     "rules": {
+        "no-console": "warn",
         "linebreak-style": 0,
         "comma-dangle": ["error", {"functions": "ignore"}],
         "react/react-in-jsx-scope": "off",
