--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -7,6 +7,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-uuid": "^2.0.0",
+    "devextreme": "23.1.4",
+    "devextreme-react": "23.1.4",
+    "install": "0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-localization": "^1.0.19",
