pref/main/deploySetting
리액트+스프링부트 배포환경 적용

--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -51,5 +51,7 @@
     "eslint": "^8.46.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.33.1"
-  }
+  },
+  "proxy": "http://localhost:8080/",
+  "homepage": "."
 }
