--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "devextreme": "23.1.4",
     "devextreme-react": "23.1.4",
+    "flexlayout-react": "^0.7.9",
     "install": "0.13.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
