--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -16,12 +16,13 @@
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-localization": "^1.0.19",
-    "react-redux": "^8.0.7",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "react-uuid": "^2.0.0",
     "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
