--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-grid-layout": "^1.3.4",
     "react-localization": "^1.0.19",
     "react-redux": "^8.1.2",
