--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ace-builds": "^1.27.0",
     "devextreme": "23.1.4",
     "devextreme-react": "23.1.4",
     "flexlayout-react": "^0.7.9",
     "install": "0.13.0",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
@@ -56,6 +58,6 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.33.1"
   },
-  "proxy": "http://localhost:8080/",
+  "proxy": "http://localhost:8000/",
   "homepage": "."
 }
