--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -11,6 +11,7 @@
     "devextreme": "23.1.4",
     "devextreme-react": "23.1.4",
     "flexlayout-react": "^0.7.9",
+    "framer-motion": "^10.16.4",
     "install": "0.13.0",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
