--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -13,6 +13,7 @@
     "flexlayout-react": "^0.7.9",
     "framer-motion": "^10.16.4",
     "install": "0.13.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-beautiful-dnd": "^13.1.1",
