--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,12 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.15.0</version>
 		</dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <optional>true</optional>
+   </dependency>
 		
 	</dependencies>	
 
