--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ace-builds": "^1.27.0",
+    "axios": "^1.5.0",
     "devextreme": "23.1.4",
     "devextreme-react": "23.1.4",
     "flexlayout-react": "^0.7.9",
@@ -60,6 +61,6 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.33.1"
   },
-  "proxy": "http://localhost:8000/",
+  "proxy": "http://localhost:8080/",
   "homepage": "."
 }
