--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+    <dependency>
+      <groupId>org.mybatis.spring.boot</groupId>
+      <artifactId>mybatis-spring-boot-starter</artifactId>
+      <version>2.1.1</version>
+    </dependency>
 		<dependency>
 			<groupId>com.github.artislong</groupId>
 			<artifactId>spring-beans-loader</artifactId>
