--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=wisebiv6
 spring.datasource.password=wisebiv61012
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
+# mybatis
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 
 
