--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
       <artifactId>mybatis-spring-boot-starter</artifactId>
       <version>2.1.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.mybatis.spring.boot</groupId>
+      <artifactId>mybatis-spring-boot-starter-test</artifactId>
+      <version>2.1.1</version>
+      <scope>test</scope>
+  </dependency>
 		<dependency>
 			<groupId>com.github.artislong</groupId>
 			<artifactId>spring-beans-loader</artifactId>
