hotfix: contextRoot 설정 파일에 추가

--- a/src/main/view/src/config/config/config.json
+++ b/src/main/view/src/config/config/config.json
@@ -3,5 +3,6 @@
   "snbOnlyIcon": false,
   "useSNBDrawer": true,
   "useRibbonLabel": true,
-  "ribbonOnlyIcon": true
+  "ribbonOnlyIcon": true,
+  "contextRoot": "/editds"
 }
