--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 
+# secure
+aes256.secure.key=d2lzZWl0ZWNoMTAxMiFAIyRhZXNrZXk=
