--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -10,6 +10,7 @@
     "ace-builds": "^1.27.0",
     "axios": "^1.5.0",
     "devextreme": "23.1.4",
+    "devextreme-aspnet-data-nojquery": "^3.0.0",
     "devextreme-react": "23.1.4",
     "flexlayout-react": "^0.7.9",
     "framer-motion": "^10.16.4",
