--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
     <!-- https://mvnrepository.com/artifact/net.sf.ehcache/ehcache -->
     <dependency>
         <groupId>net.sf.ehcache</groupId>
-        <artifactId>ehcache</artifactId>o
+        <artifactId>ehcache</artifactId>
         <version>2.10.9.2</version>
     </dependency>
 
