feat : 불러오기 중간 저장

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,12 @@ spring.datasource.username=wisebiv6
 spring.datasource.password=wisebiv61012
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
+# meis oracle
+#spring.datasource.driverClass=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://3.39.29.120:1433;DatabaseName=WISE.BI.V6.KM
+#spring.datasource.username=sa
+#spring.datasource.password=Wisedemo1012!@
+
 # mssql test
 #spring.datasource.url=jdbc:sqlserver://3.36.35.153:1433;DatabaseName=WISE.BI.V6.DEV
 #spring.datasource.username=sa
