--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 		<log4j2.version>2.15.0</log4j2.version>
 		<webapp.lib>${basedir}/lib</webapp.lib>
 	</properties>
+
+  <repositories>
+    <repository>
+      <id>javaxt.com</id>
+      <url>https://www.javaxt.com/maven</url>
+    </repository>
+  </repositories>
 	
 	<dependencies>
 		<dependency>
@@ -238,11 +245,11 @@
 <!--   			<version>20200518</version> -->
 <!-- 		</dependency> -->
 		
-<!-- 		<dependency> -->
-<!-- 	        <groupId>org.apache.tomcat.embed</groupId> -->
-<!-- 	        <artifactId>tomcat-embed-jasper</artifactId> -->
-<!--         <scope>${embedded.tomcat.scope}</scope> -->
-<!--     	</dependency> -->
+		<dependency>
+	        <groupId>org.apache.tomcat.embed</groupId>
+	        <artifactId>tomcat-embed-jasper</artifactId>
+        <scope>${embedded.tomcat.scope}</scope>
+    </dependency>
     	
 		
 		<dependency>
@@ -268,88 +275,90 @@
       <optional>true</optional>
    </dependency>
    
-    <dependency>
-	  <groupId>javaxt</groupId> 
-	  <artifactId>javaxt</artifactId>
-	  <version>1.0.0</version>
-	  <scope>system</scope> 
-	  <systemPath>${basedir}/src/main/webapp/WEB-INF/extra-lib/javaxt-corecustom-1.0.0.jar</systemPath> 
-    </dependency>
+   <dependency>
+    <groupId>javaxt</groupId>
+    <artifactId>javaxt-core</artifactId>
+    <version>2.1.2</version>
+  </dependency>
 
     <dependency>
         <groupId>org.json</groupId>
         <artifactId>json</artifactId>
         <version>20231013</version>
     </dependency>
+  
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>8.0.1</version>
+    </dependency>
   </dependencies>	
 
 	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-maven-plugin</artifactId>
-				</plugin>
-				<plugin>
-					<groupId>com.github.eirslett</groupId>
-					<artifactId>frontend-maven-plugin</artifactId>
-					<version>1.12.1</version>
-					<configuration>
-						<workingDirectory>src/main/view</workingDirectory>
-						<installDirectory>target</installDirectory>
-					</configuration>
-					<executions>
-						<execution>
-							<id>install node and npm</id>
-							<goals>
-								<goal>install-node-and-npm</goal>
-							</goals>
-							<configuration>
-								<nodeVersion>v16.14.0</nodeVersion>
-								<npmVersion>8.3.1</npmVersion>
-							</configuration>
-						</execution>
-						<execution>
-							<id>npm install</id>
-							<goals>
-								<goal>npm</goal>
-							</goals>
-							<configuration>
-								<arguments>install</arguments>
-							</configuration>
-						</execution>
-						<execution>
-							<id>npm run build</id>
-							<goals>
-								<goal>npm</goal>
-							</goals>
-							<configuration>
-								<arguments>run build</arguments>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-				<plugin>
-					<artifactId>maven-antrun-plugin</artifactId>
-					<executions>
-						<execution>
-							<phase>generate-resources</phase>
-							<configuration>
-								<target>
-									<copy todir="${project.build.directory}/classes/public">
-										<fileset
-											dir="${project.basedir}/src/main/view/build" />
-									</copy>
-								</target>
-							</configuration>
-							<goals>
-								<goal>run</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>com.github.eirslett</groupId>
+        <artifactId>frontend-maven-plugin</artifactId>
+        <version>1.12.1</version>
+        <configuration>
+          <workingDirectory>src/main/view</workingDirectory>
+          <installDirectory>target</installDirectory>
+        </configuration>
+        <executions>
+          <execution>
+            <id>install node and npm</id>
+            <goals>
+              <goal>install-node-and-npm</goal>
+            </goals>
+            <configuration>
+              <nodeVersion>v16.14.0</nodeVersion>
+              <npmVersion>8.3.1</npmVersion>
+            </configuration>
+          </execution>
+          <execution>
+            <id>npm install</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <configuration>
+              <arguments>install</arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>npm run build</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <configuration>
+              <arguments>run build</arguments>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>generate-resources</phase>
+            <configuration>
+              <target>
+                <copy todir="${project.build.directory}/classes/public">
+                  <fileset
+                    dir="${project.basedir}/src/main/view/build" />
+                </copy>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
 	</build>
 
 </project>
