pref: context path 변경 (olap)

--- a/src/main/view/src/config/config/config.json
+++ b/src/main/view/src/config/config/config.json
@@ -4,5 +4,5 @@
   "useSNBDrawer": true,
   "useRibbonLabel": true,
   "ribbonOnlyIcon": true,
-  "contextRoot": "/editds"
+  "contextRoot": "/olap"
 }
