Revert "test: main.yml 변경"
This reverts commit 50876bd2d88cc233d1b848f96f0611e78ff246ed.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
           chmod -R 777 ./
           ./mvnw clean install
       - name: Undeploy Application
-        run: curl -u 'wise:wise1012' "http://3.37.38.145:38080/manager/text/undeploy?path=/olap"
+        run: curl -u 'wise:wise1012' "http://3.37.38.145:38080/manager/text/undeploy?path=/editds"
 
       - name: Deploy Application
         run: |
           cd target
-          mv MarketingPlatForm-0.0.1-SNAPSHOT.war olap.war
-          curl -u 'wise:wise1012' -X PUT --upload-file olap.war "http://3.37.38.145:38080/manager/text/deploy?path=/olap"
+          mv MarketingPlatForm-0.0.1-SNAPSHOT.war editds.war
+          curl -u 'wise:wise1012' -X PUT --upload-file editds.war "http://3.37.38.145:38080/manager/text/deploy?path=/editds"
