불러오기 오류 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,14 @@ spring.datasource.username=sa
 spring.datasource.password=dnltpmeta1012!@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+# oracle
+#spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
+#spring.datasource.username=refactoringtest
+#spring.datasource.password=wisebiv61012
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+
+
 # mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 
