--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # oracle
-#spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
-#spring.datasource.username=wisebiv6
-#spring.datasource.password=wisebiv61012
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
+spring.datasource.username=wisebiv6
+spring.datasource.password=wisebiv61012
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # meis oracle
 #spring.datasource.driverClass=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -11,10 +11,10 @@
 #spring.datasource.password=Wisedemo1012!@
 
 # mssql test
-spring.datasource.url=jdbc:sqlserver://3.36.35.153:1433;DatabaseName=WISE.BI.V6.DEV
-spring.datasource.username=sa
-spring.datasource.password=dnltpmeta1012!@
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://3.36.35.153:1433;DatabaseName=WISE.BI.V6.DEV
+#spring.datasource.username=sa
+#spring.datasource.password=dnltpmeta1012!@
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # oracle
 #spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
