--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -62,6 +62,6 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.33.1"
   },
-  "proxy": "http://localhost:8080/",
+  "proxy": "http://localhost:8080",
   "homepage": "."
 }
