--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # oracle
 spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
-spring.datasource.username=wisebiv6
+spring.datasource.username=refactoringtest
 spring.datasource.password=wisebiv61012
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
