--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 
 # secure
 aes256.secure.key=d2lzZWl0ZWNoMTAxMiFAIyRhZXNrZXk=
+
+upload.path=webapp/UpladedFiles
