--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 # secure
 aes256.secure.key=d2lzZWl0ZWNoMTAxMiFAIyRhZXNrZXk=
 
-upload.path=classpath:UpladedFiles
+upload.path=classpath:UpladedFiles/
