--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
 jobs:
   my_job:
     env:
+      NODE_OPTIONS: --max_old_space_size=4096
       CI: ''
     name: Deploy Refactoring Project
     runs-on: ubuntu-latest
