--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -13,6 +13,8 @@
     "devextreme": "23.1.4",
     "devextreme-aspnet-data-nojquery": "^3.0.0",
     "devextreme-react": "23.1.4",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "flexlayout-react": "^0.7.9",
     "framer-motion": "^10.16.4",
     "install": "0.13.0",
