--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 aes256.secure.key=d2lzZWl0ZWNoMTAxMiFAIyRhZXNrZXk=
 
 upload.path=classpath:UpladedFiles/
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
