--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <description>Demo project for Spring Boot</description>
   <properties>
     <java.version>1.8</java.version>
-    <log4j2.version>2.15.0</log4j2.version>
+    <log4j2.version>2.20.0</log4j2.version>
     <webapp.lib>${basedir}/lib</webapp.lib>
   </properties>
 
@@ -206,7 +206,7 @@
     <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
     <dependency>
       <groupId>org.apache.poi</groupId>
-      <artifactId>poi</artifactId>
+      <artifactId>poi-ooxml</artifactId>
       <version>5.2.4</version>
     </dependency>
 
@@ -249,7 +249,7 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.11.0</version>
+      <version>2.13.0</version>
     </dependency>
 
     <!-- 		<dependency> -->
