--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -32,7 +32,8 @@
     "redux": "^4.2.1",
     "redux-mock-store": "^1.5.4",
     "styled-components": "^6.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
