sty: 로그인 화면 디자인 적용

--- a/src/main/view/src/config/config/config.json
+++ b/src/main/view/src/config/config/config.json
@@ -1,7 +1,7 @@
 {
   "test": "TEST",
   "snbOnlyIcon": false,
-  "useSNBDrawer": true,
+  "useSNBDrawer": false,
   "useRibbonLabel": true,
   "ribbonOnlyIcon": true,
   "contextRoot": "/editds"
