sty: 디자이너 화면 디자인 적용

--- a/src/main/view/src/config/config/config.json
+++ b/src/main/view/src/config/config/config.json
@@ -3,6 +3,6 @@
   "snbOnlyIcon": false,
   "useSNBDrawer": false,
   "useRibbonLabel": true,
-  "ribbonOnlyIcon": true,
+  "ribbonOnlyIcon": false,
   "contextRoot": "/editds"
 }
