--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ aes256.secure.key=d2lzZWl0ZWNoMTAxMiFAIyRhZXNrZXk=
 
 upload.path=classpath:UpladedFiles/
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+spring.web.cors.allow-credentials=true
+spring.web.cors.allowed-origins=http://localhost:3000
+spring.web.cors.allowed-methods=GET,POST
