feat: 박스 플롯 추가(마스터 필터 X)

--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -13,11 +13,13 @@
     "@grapecity/spread-sheets-languagepackages": "15.1.4",
     "@grapecity/spread-sheets-pdf": "15.1.4",
     "@grapecity/spread-sheets-pivot-addon": "15.1.4",
-    "@grapecity/spread-sheets-tablesheet": "15.1.4",
     "@grapecity/spread-sheets-print": "15.1.4",
     "@grapecity/spread-sheets-react": "15.1.4",
     "@grapecity/spread-sheets-resources-ko": "15.1.4",
     "@grapecity/spread-sheets-shapes": "15.1.4",
+    "@grapecity/spread-sheets-tablesheet": "15.1.4",
+    "@nivo/boxplot": "^0.84.0",
+    "@nivo/core": "^0.84.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-menu": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -25,6 +27,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ace-builds": "^1.27.0",
     "axios": "^1.5.0",
+    "d3": "^7.8.5",
     "devextreme": "23.1.4",
     "devextreme-aspnet-data-nojquery": "^3.0.0",
     "devextreme-react": "23.1.4",
