파일 저장 용량 크기 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.web.cors.allow-credentials=true
 spring.web.cors.allowed-origins=http://localhost:3000
 spring.web.cors.allowed-methods=GET,POST
+
+
+spring.servlet.multipart.max-file-size=128MB
+spring.servlet.multipart.max-request-size=128MB
+spring.servlet.multipart.enabled=true
