--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
       <artifactId>mariadb-java-client</artifactId>
       <version>2.7.5</version>
     </dependency>
+    <dependency>
+      <groupId>com.ibm.db2</groupId>
+      <artifactId>jcc</artifactId>
+      <version>11.1.4.4</version>
+    </dependency>
 
     <!-- 		Altibase JDBC -->
     <!-- 		<dependency> -->
