--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -53,6 +53,7 @@
     "redux": "^4.2.1",
     "redux-mock-store": "^1.5.4",
     "styled-components": "^6.0.7",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
