perf 환경설정 파일 위치변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,5 @@ spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.enabled=true
 
 # config file path
-meta.config = UploadFiles/meta/config.json
+
+meta.config = src/main/resources/meta/config.json
