feat/사용자 Session 유지 DB 로 변경
# USER_SESSION_MSTR 테이블 설정
# application.properties 옵션 추가
# 클라이언트 IP 통해서 세션KEY값 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,8 @@ spring.servlet.multipart.enabled=true
 # config file path
 
 meta.config = src/main/resources/meta/config.json
+
+# session type = database else null
+#session.type = database
+session.type = request
+
