feat: 직접 URL 세션 오류 임시 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,6 @@ meta.config = src/main/resources/meta/config.json
 #session.type = database
 session.type = request
 
+
+server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.secure=true
