hotfix/ DB 커넥션 풀 최소/최대 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,5 +48,9 @@ session.type = database
 #session.type = 
 
 
+connection.pool.min = 10 
+connection.pool.max = 10
+
+
 server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.secure=true
