JNDI 날짜 포멧 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,17 +10,16 @@
 # spring.datasource.password=dnltpmeta1012!@
 # spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# oracle
-spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
 # spring.datasource.username=wisebiv6
 # spring.datasource.username=refactoringtest
 # spring.datasource.username=wisebiv6
 #spring.datasource.password=wisebiv61012
+
+# oracle
+spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
 spring.datasource.username=hnswise
 spring.datasource.password=wise1012
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
-
 
 # mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
@@ -58,3 +57,9 @@ datasource.mstr.dsname = null
 
 server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.secure=true
+
+# JDBC 시간대 설정 (예: UTC 또는 Asia/Seoul)
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
+
+# NLS_DATE_FORMAT 설정
+spring.jpa.properties.hibernate.default_nls_date_format=RR/MM/DD
