hotfix/엑셀업로드리소스맵 권한 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,8 @@
 #spring.datasource.password=wisebiv61012
 
 # oracle
-spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
+# spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=hnswise
 spring.datasource.password=wise1012
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -43,8 +44,8 @@ spring.servlet.multipart.enabled=true
 meta.config = src/main/resources/meta/config.json
 
 # session type = database else null
-session.type = database
-#session.type = 
+# session.type = database
+session.type = request
 
 
 connection.pool.min = 10 
@@ -63,3 +64,6 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
 
 # NLS_DATE_FORMAT 설정
 spring.jpa.properties.hibernate.default_nls_date_format=RR/MM/DD
+
+
+excelresource.link = false
