hotfix/ 홈앤쇼핑 조회전 로그 추가, 서브토탈 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,5 +65,5 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
 # NLS_DATE_FORMAT 설정
 spring.jpa.properties.hibernate.default_nls_date_format=RR/MM/DD
 
-
+# 엑셀 업로드 리소스맵기능
 excelresource.link = false
