hotfix/ 홈앤쇼핑 피벗그리드 다운로드 오류 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,8 @@
 
 # oracle
 # spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@10.0.11.104:1511:orcl
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=hnswise
 spring.datasource.password=wise1012
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
